# sorts

./: CMakeLists.txt  ISorter.hpp  generators.hpp  linked_list.hpp  main.cpp  sequence.hpp  sequence_list.hpp  sorts.hpp  test.hpp  vectorSequence.hpp  ТЗ Морозов Г Б20-205.docx
include/: sorts.h
src/: main.cpp  sorts.cpp
